tests/functional/data/transpiler/common/errors/kernel/kernel_does_not_take_arguments.err
kernel_does_not_take_arguments.cpp:1:1: error: [@kernel] does not take arguments
    1 | @kernel(1) void test_kern() {
      | ^
